# openrepo-support-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: openrepo_negative_cases.jsonl  openrepo_support_tasks.jsonl
docs/: architecture.md  demo.md  eval_report.md  evaluation.md  llm_demo.md  persistence.md  roadmap.md
examples/: deepseek_llm_demo_output.json  tasks.jsonl
src/openrepo_agent/: __init__.py  agent.py  cli.py  events.py  indexer.py  intent.py  llm.py  memory.py  models.py  monitor.py  storage.py  web.py  workflow.py
src/openrepo_agent/eval/: __init__.py  metrics.py  runner.py
src/openrepo_agent/tools/: registry.py  repo_tools.py
tests/: test_agent.py  test_approval.py  test_eval.py  test_indexer.py  test_intent.py  test_llm.py  test_storage_memory.py  test_web.py  test_workflow.py
