[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openrepo-support-agent"
version = "0.1.0"
description = "An end-to-end support agent for open-source repositories."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yingxian Peng" }]
dependencies = []

[project.optional-dependencies]
workflow = ["langgraph>=0.2"]
llm = ["requests>=2.31"]

[project.scripts]
openrepo-agent = "openrepo_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
